Physical: Setup initial API
