# src/srv-physical/api/openapi/model_error.go
@@ -1,0 +1,212 @@
+/*
+srv-physical
+
+Service to handle buttons, leds, display backlight, ...
+
+API version: 0.1.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// Error struct for Error
+type Error struct {
+	// HTTP status code
+	Status *int32 `json:"status,omitempty"`
+	Code ErrorCode `json:"code"`
+	// Human-readable description of the error
+	Message string `json:"message"`
+	// Object to which this error is related
+	Instance *string `json:"instance,omitempty"`
+}
+
+// NewError instantiates a new Error object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewError(code ErrorCode, message string) *Error {
+	this := Error{}
+	this.Code = code
+	this.Message = message
+	return &this
+}
+
+// NewErrorWithDefaults instantiates a new Error object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewErrorWithDefaults() *Error {
+	this := Error{}
+	return &this
+}
+
+// GetStatus returns the Status field value if set, zero value otherwise.
+func (o *Error) GetStatus() int32 {
+	if o == nil || o.Status == nil {
+		var ret int32
+		return ret
+	}
+	return *o.Status
+}
+
+// GetStatusOk returns a tuple with the Status field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Error) GetStatusOk() (*int32, bool) {
+	if o == nil || o.Status == nil {
+		return nil, false
+	}
+	return o.Status, true
+}
+
+// HasStatus returns a boolean if a field has been set.
+func (o *Error) HasStatus() bool {
+	if o != nil && o.Status != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetStatus gets a reference to the given int32 and assigns it to the Status field.
+func (o *Error) SetStatus(v int32) {
+	o.Status = &v
+}
+
+// GetCode returns the Code field value
+func (o *Error) GetCode() ErrorCode {
+	if o == nil {
+		var ret ErrorCode
+		return ret
+	}
+
+	return o.Code
+}
+
+// GetCodeOk returns a tuple with the Code field value
+// and a boolean to check if the value has been set.
+func (o *Error) GetCodeOk() (*ErrorCode, bool) {
+	if o == nil  {
+		return nil, false
+	}
+	return &o.Code, true
+}
+
+// SetCode sets field value
+func (o *Error) SetCode(v ErrorCode) {
+	o.Code = v
+}
+
+// GetMessage returns the Message field value
+func (o *Error) GetMessage() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Message
+}
+
+// GetMessageOk returns a tuple with the Message field value
+// and a boolean to check if the value has been set.
+func (o *Error) GetMessageOk() (*string, bool) {
+	if o == nil  {
+		return nil, false
+	}
+	return &o.Message, true
+}
+
+// SetMessage sets field value
+func (o *Error) SetMessage(v string) {
+	o.Message = v
+}
+
+// GetInstance returns the Instance field value if set, zero value otherwise.
+func (o *Error) GetInstance() string {
+	if o == nil || o.Instance == nil {
+		var ret string
+		return ret
+	}
+	return *o.Instance
+}
+
+// GetInstanceOk returns a tuple with the Instance field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *Error) GetInstanceOk() (*string, bool) {
+	if o == nil || o.Instance == nil {
+		return nil, false
+	}
+	return o.Instance, true
+}
+
+// HasInstance returns a boolean if a field has been set.
+func (o *Error) HasInstance() bool {
+	if o != nil && o.Instance != nil {
+		return true
+	}
+
+	return false
+}
+
+// SetInstance gets a reference to the given string and assigns it to the Instance field.
+func (o *Error) SetInstance(v string) {
+	o.Instance = &v
+}
+
+func (o Error) MarshalJSON() ([]byte, error) {
+	toSerialize := map[string]interface{}{}
+	if o.Status != nil {
+		toSerialize["status"] = o.Status
+	}
+	if true {
+		toSerialize["code"] = o.Code
+	}
+	if true {
+		toSerialize["message"] = o.Message
+	}
+	if o.Instance != nil {
+		toSerialize["instance"] = o.Instance
+	}
+	return json.Marshal(toSerialize)
+}
+
+type NullableError struct {
+	value *Error
+	isSet bool
+}
+
+func (v NullableError) Get() *Error {
+	return v.value
+}
+
+func (v *NullableError) Set(val *Error) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableError) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableError) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableError(val *Error) *NullableError {
+	return &NullableError{value: val, isSet: true}
+}
+
+func (v NullableError) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableError) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
